--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18.1.0",
     "react-jss": "^10.9.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
+    "react-table": "^7.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
