--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.30.0",
     "react-jss": "^10.9.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.7.0",
     "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
